kubernetes/4_session_affinity/myblog.yaml
apiVersion: v1
kind: Service
metadata:
  name: myblog
  labels:
    app: myblog
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: myblog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myblog
      version: v1
  template:
    metadata:
      labels:
        app: myblog
        version: v1
    spec:
      containers:
      - image: gnovack/my-blog:v1
        imagePullPolicy: IfNotPresent
        name: myblog
        ports:
        - containerPort: 80
