kubernetes/4_session_affinity/myblog-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myblog
spec:
  host: myblog
  trafficPolicy:
    loadBalancer:
      consistentHash: 
        httpQueryParameterName: id
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
